--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <!-- Favicon & Manifest -->
     <link rel="icon" href="/favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 
     <!-- Google Fonts Style -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" /> -->
